<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:gravity="center"
    android:id="@+id/widgetID">


    <ImageView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:src="@drawable/widgetback"

       />

    <TextView
        android:id="@+id/user_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/prog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginStart="43dp"
        android:maxLength="9"
        android:text="@string/program"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/prog_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="97dp"
        android:maxLength="9"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />


</RelativeLayout>